base: add lens dependency

--- a/src/lib_base/dune
+++ b/src/lib_base/dune
@@ -23,7 +23,8 @@
             ptime
             ezjsonm
             lwt
-            ipaddr))
+            ipaddr
+	    lens))
 
 (ocamllex point_parser)
 
