--- a/.gitlab/ci/integration.yml
+++ b/.gitlab/ci/integration.yml
@@ -2,7 +2,7 @@
 .integration_template:
   extends: .test_template
   before_script:
-    - make
+    - make release
 
 integration:proto:sandbox:
   extends: .integration_template
@@ -24,7 +24,7 @@ script:prepare_migration_test:
     - last_proto_name=$(find src -name "proto_[0-9][0-9][0-9]_*" | awk -F'/' '{print $NF}' | sort -r | head -1)
     - last_proto_version=$(echo $last_proto_name | cut -d'_' -f2)
     - new_proto_version=$(printf "%03d" $((last_proto_version + 1)))
-    - make
+    - make release
   script:
     - ./scripts/prepare_migration_test.sh manual "next_$new_proto_version" 1
   allow_failure: true # This test fails starting from 008 because bash thinks 008 is octal
