--- a/.gitlab/ci/tezt.yml
+++ b/.gitlab/ci/tezt.yml
@@ -3,7 +3,7 @@
 tezt:main:
   extends: .test_template
   before_script:
-    - make
+    - make release
   script:
     - dune exec tezt/tests/main.exe -- --color --log-buffer-size 5000 --log-file tezt.log --global-timeout 3300 --time
   artifacts:
@@ -21,7 +21,7 @@ tezt:manual:migration:
     - block_hash=$(echo mainnet.roll.* | sed -r 's/mainnet\.roll\.[0-9_-]+\.(.*)\.[0-9]+\.chain\.xz/\1/g')
     - cat mainnet.roll.* | xz -d -v -T0 > mainnet.rolling
 
-    - make
+    - make release
     - scripts/prepare_migration_test.sh auto mainnet.rolling "$block_hash"
   script:
     - dune exec ./tezt/manual_tests/main.exe -- migration --color --log-buffer-size 5000 --log-file tezt-migration.log
@@ -30,4 +30,3 @@ tezt:manual:migration:
     paths:
       - tezt-migration.log
     expire_in: 30 days
-
