Proto/env: move BLS signature from lib_protocol to lib_crypto

--- a/src/lib_crypto/test/dune
+++ b/src/lib_crypto/test/dune
@@ -11,6 +11,7 @@
         test_prop_signature
         test_prop_hacl_hash
         test_deterministic_nonce
+	test_bls_signature
         test_signature)
  (libraries tezos-stdlib
             tezos-crypto
