--- a/src/proto_alpha/lib_protocol/test/dune
+++ b/src/proto_alpha/lib_protocol/test/dune
@@ -59,3 +59,10 @@
  (alias runtest_lint)
  (deps (glob_files *.ml{,i}))
  (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
+
+; runs only the `Quick tests and only for cache
+(rule
+ (alias runtest_ba)
+ (deps (glob_files contracts/*))
+ (package tezos-protocol-alpha-tests)
+ (action (run %{exe:main.exe} test baking_account -v -q)))
