--- a/src/lib_protocol_environment/test/unit/dune
+++ b/src/lib_protocol_environment/test/unit/dune
@@ -3,9 +3,11 @@
  (libraries tezos-protocol-environment
             tezos-base
             alcotest-lwt
+            tezos-test-services
             tezos-stdlib-unix)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_base
+                   -open Tezos_test_services
                    -open Tezos_protocol_environment)))
 
 (rule
