--- a/src/proto_alpha/lib_protocol/test/unit/dune
+++ b/src/proto_alpha/lib_protocol/test/unit/dune
@@ -14,8 +14,8 @@
                    -open Tezos_client_alpha
                    -open Tezos_protocol_alpha
                    -open Tezos_protocol_environment_alpha
-                   -open Tezos_alpha_test_helpers
-                   -open Tezos_test_services)))
+                   -open Tezos_test_services
+                   -open Tezos_alpha_test_helpers)))
 
 (rule
  (alias runtest)
